<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".OnboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/onboardConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/onboardpeep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/onboard_image"
            android:src="@drawable/onboard_peep"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/onboard_appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/app_name"
            android:textColor="#969BAB"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/onboard_descrip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onboardpeep"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/onboard_descrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat_extrabold"
            android:text="@string/onboard_descrip"
            android:textSize="44sp"
            app:layout_constraintBottom_toTopOf="@+id/onboard_button"
            app:layout_constraintStart_toStartOf="@+id/onboard_appname" />

        <Button
            android:id="@+id/onboard_button"
            style="@style/black_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="51dp"
            android:text="@string/onboard_get_started"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>