<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash_root"
    style="@style/AppTheme.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mainpages.SplashActivity">

    <TextView
        android:id="@+id/Splash_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_extrabold"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="44sp"
        app:layout_constraintBottom_toTopOf="@+id/Splash_Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Splash_Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|clip_vertical|center_horizontal"
        android:layout_marginTop="355dp"
        android:layout_marginBottom="231dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintBottom_toTopOf="@+id/splash_company_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_mark" />

    <TextView
        android:id="@+id/splash_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center_horizontal"
        android:text="@string/company_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Splash_Logo" />

    <TextView
        android:id="@+id/splash_created_by"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="212dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center_horizontal"
        android:text="@string/created_by"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/splash_company_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Splash_Logo"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>