<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".sucesspage.SucessFragment">

    <LinearLayout
        android:id="@+id/succslayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="128dp"
            android:layout_weight="1"
            android:contentDescription="@string/a_tick"
            android:src="@drawable/ok" />

        <TextView
            android:id="@+id/winner_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_extrabold"
            android:gravity="center"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/winner_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:text="@string/winnernotices"
            android:textSize="24sp" />

        <Button
            android:id="@+id/playagain_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@drawable/nopadding_dark"
            android:fontFamily="@font/montserrat_extrabold"
            android:paddingStart="24dp"
            android:paddingTop="16dp"
            android:paddingEnd="24dp"
            android:paddingBottom="16dp"
            android:text="@string/play_again"
            android:textColor="#ffffff" />
    </LinearLayout>

</layout>