<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.FriendsFragment">

    <LinearLayout
        android:id="@+id/friendlinearroot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFBD12"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/friendsLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/next_button_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="28dp"
                android:contentDescription="@string/next_button"
                android:src="@drawable/navigation_icon"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/friendstitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_extrabold"
                android:text="@string/friends_title"
                android:textAlignment="center"
                android:textSize="40sp"
                app:layout_constraintBaseline_toBaselineOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.mindorks.editdrawabletext.EditDrawableText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/padding_white"
            android:drawableRight="@drawable/search"
            android:ems="10"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/search_bar"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            android:paddingTop="4dp"
            android:paddingEnd="12dp"
            android:paddingBottom="4dp"
            android:textColorHint="#18191F"
            android:textSize="28sp"
            app:isDrawableShownWhenTextIsEmpty="false"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/friends_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

</layout>